--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,12 @@
     }
 
     .form {
-        position: relative;
+        position: absolute;
         z-index: 1;
-        background: #FFFFFF;
-        max-width: 360px;
-        margin: 0 auto 100px;
-        padding: 45px;
+        left: 10%;
+        top: 6%;
+        width: 80%;
         text-align: center;
-        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     }
 
     .form input {
@@ -67,7 +65,7 @@
 
     .container {
         position: relative;
-        z-index: 1;
+        z-index: 2;
         max-width: 300px;
         margin: 0 auto;
     }
@@ -324,7 +322,7 @@
         background: #CCCCCC;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 100%;
-        font-size: 80%;
+        font-size: 70%;
     }
 
     .month-box{
@@ -340,4 +338,30 @@
         width: 100%;
         height: 100%;
         font-size: 100%;
+    }
+
+    .check{
+        display: none;
+    }
+
+    .icon{
+        position: absolute;
+        cursor: pointer;
+        padding: 0%;
+        z-index: 2;
+    }
+
+    .bar{
+        position: absolute;
+        background-color: #333;
+        height: 130%;
+        width: 20%;
+        transition: all .2s linear;
+        z-index: 1;
+        top: 0%;
+        left: -20%;
+    }
+
+    .check:checked ~ .bar{
+        transform:translateX(100%);
     }
